force-app/main/default/objects/Capitalization__Word_Setting__c/Capitalization__Word_Setting__c.object-meta.xml
<CustomObject>
    <description>Word Settings - Capitalization settings for Opp,Lead, Contact and Account</description>
    <label>Word Setting</label>
    <nameField>
        <label>Word Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Word Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>