force-app/main/default/objects/Capitalization__Word_Setting__c/fields/Capitalization__Field_API__c.field-meta.xml
<CustomField>
    <fullName>Capitalization__Field_API__c</fullName>
    <description>Field API</description>
    <inlineHelpText>Field API</inlineHelpText>
    <label>Field API</label>
    <length>120</length>
    <type>Text</type>
</CustomField>