force-app/main/default/objects/Capitalization__Word_Setting__c/fields/Capitalization__Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Capitalization__Field_Label__c</fullName>
    <description>Field Label</description>
    <inlineHelpText>Field Label</inlineHelpText>
    <label>Field Label</label>
    <length>120</length>
    <type>Text</type>
</CustomField>