force-app/main/default/objects/Capitalization__Word_Setting__c/fields/Capitalization__Object_API__c.field-meta.xml
<CustomField>
    <fullName>Capitalization__Object_API__c</fullName>
    <description>Object API</description>
    <inlineHelpText>Object API</inlineHelpText>
    <label>Object API</label>
    <length>120</length>
    <type>Text</type>
</CustomField>