force-app/main/default/objects/Capitalization__Word_Setting__c/fields/Capitalization__Object_Label__c.field-meta.xml
<CustomField>
    <fullName>Capitalization__Object_Label__c</fullName>
    <description>Object Label</description>
    <inlineHelpText>Object Label</inlineHelpText>
    <label>Object Label</label>
    <length>120</length>
    <type>Text</type>
</CustomField>