force-app/main/default/objects/Capitalization__Word_Setting__c/fields/Capitalization__Type__c.field-meta.xml
<CustomField>
    <fullName>Capitalization__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Camel</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Sentence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>